Separate files a bit better

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,10 @@
-cmake_minimum_required(VERSION 3.20)
-
-file(TO_CMAKE_PATH "./CMakeLists.txt" LOC_PATH)
-if(EXISTS "${LOC_PATH}")
-    message(FATAL_ERROR "You cannot build in a source directory (or any directory with a CMakeLists.txt file). Please make a build subdirectory.")
-endif()
-
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+cmake_minimum_required(VERSION 3.16)
 
 project(protegon)
 
 option(TESTS "Build protegon tests" OFF)
 
-find_package(protegon REQUIRED)
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/SetupProtegon.cmake)
 
 if(TESTS)
   add_subdirectory(tests)
