Add shader tests

--- a/tests/protegon/CMakeLists.txt
+++ b/tests/protegon/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.20)
 project(tests)
 
 set(TEST_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
+set(PARENT_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../src")
 
 file(GLOB_RECURSE TEST_SRC_FILES CONFIGURE_DEPENDS LIST_DIRECTORIES false 
     "${TEST_SRC_DIR}/*.h" "${TEST_SRC_DIR}/*.cpp")
@@ -10,7 +11,8 @@ file(GLOB_RECURSE TEST_SRC_FILES CONFIGURE_DEPENDS LIST_DIRECTORIES false
 add_executable(${PROJECT_NAME} ${TEST_SRC_FILES})
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${TEST_SRC_DIR}
-                                                   ${MODULES_DIR}/ecs)
+                                                   ${MODULES_DIR}/ecs
+                                                   ${PARENT_SRC_DIR})
 
 #add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}../../protegon binary_dir)
 
