--- a/tests/protegon/CMakeLists.txt
+++ b/tests/protegon/CMakeLists.txt
@@ -2,22 +2,12 @@ cmake_minimum_required(VERSION 3.20)
 
 project(tests)
 
-set(TEST_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
-set(PARENT_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../src")
+add_executable(${PROJECT_NAME} ${PTGN_TEST_SRC_FILES})
 
-file(GLOB_RECURSE TEST_SRC_FILES CONFIGURE_DEPENDS LIST_DIRECTORIES false 
-    "${TEST_SRC_DIR}/*.h" "${TEST_SRC_DIR}/*.cpp")
-
-add_executable(${PROJECT_NAME} ${TEST_SRC_FILES})
-
-target_include_directories(${PROJECT_NAME} PRIVATE ${TEST_SRC_DIR}
-                                                   ${MODULES_DIR}/ecs
-                                                   ${PARENT_SRC_DIR})
-
-#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}../../protegon binary_dir)
+target_include_directories(${PROJECT_NAME} PRIVATE ${PTGN_TEST_SRC_FILES})
 
 add_protegon_to(${PROJECT_NAME})
 
-IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/resources/")
+IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/resources")
     create_resource_symlink(${PROJECT_NAME} "resources")
 ENDIF()
