Cleaned up CMake (wip)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,11 @@ cmake_minimum_required(VERSION 3.16)
 
 project(protegon)
 
-option(PROTEGON_TESTS "Build protegon tests" OFF)
+option(PROTEGON_TESTS "Build protegon tests" ON)
 
 if (WIN32)
-  option(DOWNLOAD_SDL "Download prebuilt windows SDL libraries" OFF)
+  option(DOWNLOAD_SDL "Download prebuilt windows SDL libraries" ON)
+  option(LINK_STATIC_SDL "Link SDL2 statically into the protegon library" OFF)
   # TODO: Figure out how to disable console for macOS and enable for linux
   option(ENABLE_CONSOLE "Enable console executable" ON)
 endif()
