Added SDL to tests for performance comparison purposes

--- a/tests/protegon/CMakeLists.txt
+++ b/tests/protegon/CMakeLists.txt
@@ -8,6 +8,13 @@ target_include_directories(${PROJECT_NAME} PRIVATE "${PROTEGON_ROOT_DIR}/src")
 
 add_protegon_to(${PROJECT_NAME})
 
+target_link_libraries(${PROJECT_NAME} PRIVATE ${OPENGL_LIBRARIES}
+          SDL2::SDL2main
+          SDL2::SDL2
+          SDL2_image::SDL2_image
+          SDL2_ttf::SDL2_ttf
+          SDL2_mixer::SDL2_mixer)
+
 IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/resources")
     create_resource_symlink(${PROJECT_NAME} "resources")
 ENDIF()
