Fixed resources warning

--- a/tests/protegon/CMakeLists.txt
+++ b/tests/protegon/CMakeLists.txt
@@ -11,8 +11,13 @@ add_protegon_to(${PROJECT_NAME})
 if (EMSCRIPTEN)
     set(ASSETS_DIRECTORY "resources")
     if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ASSETS_DIRECTORY}")
-        create_resource_symlink(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}../../../ ${ASSETS_DIRECTORY})
+        set(DEST_SYMLINK ${CMAKE_CURRENT_BINARY_DIR})
+        message(STATUS "Creating resources symlink to ${DEST_SYMLINK}")
+        create_resource_symlink(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR} ${DEST_SYMLINK} ${ASSETS_DIRECTORY})
+    else()
+        message(STATUS "Failed to create resources symlink to ${CMAKE_CURRENT_SOURCE_DIR}/${ASSETS_DIRECTORY}")
     endif()
+
     set(SHELL_HTML_FILE "${PROTEGON_ROOT_DIR}/emscripten/shell.html")
     set(CMAKE_EXECUTABLE_SUFFIX ".html") 
     if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
