--- a/tests/protegon/CMakeLists.txt
+++ b/tests/protegon/CMakeLists.txt
@@ -11,7 +11,7 @@ add_protegon_to(${PROJECT_NAME})
 if (EMSCRIPTEN)
     set(ASSETS_DIRECTORY "resources")
     if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ASSETS_DIRECTORY}")
-        set(DEST_SYMLINK ${CMAKE_CURRENT_BINARY_DIR})
+        set(DEST_SYMLINK "${CMAKE_CURRENT_BINARY_DIR}/../../")
         message(STATUS "Creating resources symlink to ${DEST_SYMLINK}")
         create_resource_symlink(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR} ${DEST_SYMLINK} ${ASSETS_DIRECTORY})
     else()
