Added camera shake demo

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(plot)
 add_subdirectory(renderer)
 add_subdirectory(dropdown)
 add_subdirectory(audio)
+add_subdirectory(camera_shake)
