Add button demo

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(renderer)
 add_subdirectory(dropdown)
 add_subdirectory(audio)
 add_subdirectory(camera_shake)
+add_subdirectory(button)
