--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(dropdown)
 add_subdirectory(audio)
 add_subdirectory(camera_shake)
 add_subdirectory(button)
+add_subdirectory(button_group)
