Added animation demo

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(audio)
 add_subdirectory(camera_shake)
 add_subdirectory(button)
 add_subdirectory(button_group)
+add_subdirectory(animation)
