--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(camera_shake)
 add_subdirectory(button)
 add_subdirectory(button_group)
 add_subdirectory(animation)
+add_subdirectory(platforming)
