Added fluid demo

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(button)
 add_subdirectory(button_group)
 add_subdirectory(animation)
 add_subdirectory(platforming)
+add_subdirectory(fluid)
