Added particle demo

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -8,4 +8,5 @@ add_subdirectory(button)
 add_subdirectory(button_group)
 add_subdirectory(animation)
 add_subdirectory(platforming)
+add_subdirectory(particle)
 add_subdirectory(fluid)
