Added fullscreen demo

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(animation)
 add_subdirectory(platforming)
 add_subdirectory(particle)
 add_subdirectory(fluid)
+add_subdirectory(fullscreen)
