Added pathfinding demo

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -9,5 +9,6 @@ add_subdirectory(button_group)
 add_subdirectory(animation)
 add_subdirectory(platforming)
 add_subdirectory(particle)
+add_subdirectory(pathfinding)
 add_subdirectory(fluid)
 add_subdirectory(fullscreen)
