Added text demo

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -10,5 +10,6 @@ add_subdirectory(animation)
 add_subdirectory(platforming)
 add_subdirectory(particle)
 add_subdirectory(pathfinding)
+add_subdirectory(text)
 add_subdirectory(fluid)
 add_subdirectory(fullscreen)
