Added scene transition example

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -12,4 +12,5 @@ add_subdirectory(particle)
 add_subdirectory(pathfinding)
 add_subdirectory(text)
 add_subdirectory(fluid)
+add_subdirectory(scene_transition)
 add_subdirectory(fullscreen)
