Added demo folders

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -14,3 +14,10 @@ add_subdirectory(text)
 add_subdirectory(fluid)
 add_subdirectory(scene_transition)
 add_subdirectory(fullscreen)
+add_subdirectory(camera)
+add_subdirectory(parallax)
+add_subdirectory(collision)
+add_subdirectory(event)
+add_subdirectory(light)
+add_subdirectory(noise)
+add_subdirectory(tween)
