--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -22,3 +22,4 @@ add_subdirectory(light)
 add_subdirectory(noise)
 add_subdirectory(tween)
 add_subdirectory(blend_mode)
+add_subdirectory(resolution)
