--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -24,3 +24,4 @@ add_subdirectory(noise)
 add_subdirectory(tween)
 add_subdirectory(blend_mode)
 add_subdirectory(resolution)
+add_subdirectory(top_down_movement)
