Add interactive demo

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -25,3 +25,4 @@ add_subdirectory(tween)
 add_subdirectory(blend_mode)
 add_subdirectory(resolution)
 add_subdirectory(top_down_movement)
+add_subdirectory(interactive)
