Start on chunk system

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(basic_rectangle)
 add_subdirectory(binary_serialization)
 add_subdirectory(paint)
 add_subdirectory(sandbox)
+add_subdirectory(chunk)
 add_subdirectory(plot)
 add_subdirectory(renderer)
 add_subdirectory(dropdown)
