--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ bld/
 [Ll]ogs/
 [Ii]nstall/
 
+!src/debug/
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
