--- a/demos/graphics_object/CMakeLists.txt
+++ b/demos/graphics_object/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(basic_rectangle)
+project(graphics_object)
 
 set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
