--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -2,10 +2,9 @@ add_subdirectory(graphics_object)
 add_subdirectory(texture_format)
 add_subdirectory(sandbox)
 add_subdirectory(translate_effect)
-
-# add_subdirectory(rotate_effect)
-# add_subdirectory(scale_effect)
-# add_subdirectory(tint_effect)
+add_subdirectory(rotate_effect)
+add_subdirectory(scale_effect)
+add_subdirectory(tint_effect)
 # add_subdirectory(shake_effect)
 # add_subdirectory(bounce_effect)
 # add_subdirectory(fade_effect)
