Added fade in and out effects

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -5,9 +5,9 @@ add_subdirectory(translate_effect)
 add_subdirectory(rotate_effect)
 add_subdirectory(scale_effect)
 add_subdirectory(tint_effect)
+add_subdirectory(fade_effect)
 # add_subdirectory(shake_effect)
 # add_subdirectory(bounce_effect)
-# add_subdirectory(fade_effect)
 add_subdirectory(binary_serialization)
 add_subdirectory(paint)
 add_subdirectory(chunk)
