--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -6,8 +6,8 @@ add_subdirectory(rotate_effect)
 add_subdirectory(scale_effect)
 add_subdirectory(tint_effect)
 add_subdirectory(fade_effect)
-# add_subdirectory(shake_effect)
-# add_subdirectory(bounce_effect)
+add_subdirectory(bounce_effect)
+add_subdirectory(shake_effect)
 add_subdirectory(binary_serialization)
 add_subdirectory(paint)
 add_subdirectory(chunk)
