--- a/demos/effect_translate/CMakeLists.txt
+++ b/demos/effect_translate/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(shake_effect)
+project(effect_translate)
 
 set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
