--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -9,12 +9,12 @@ add_subdirectory(effect_follow)
 
 add_subdirectory(camera)
 add_subdirectory(camera_shake)
-#add_subdirectory(camera_translate)
-#add_subdirectory(camera_zoom)
-#add_subdirectory(camera_rotate)
-#add_subdirectory(camera_follow)
-#add_subdirectory(camera_fade)
 
+# add_subdirectory(camera_translate)
+# add_subdirectory(camera_zoom)
+# add_subdirectory(camera_rotate)
+# add_subdirectory(camera_follow)
+# add_subdirectory(camera_fade)
 add_subdirectory(ui_dropdown)
 add_subdirectory(ui_button)
 add_subdirectory(ui_button_group)
@@ -40,8 +40,10 @@ add_subdirectory(pathfinding)
 add_subdirectory(particle)
 add_subdirectory(fluid)
 
-add_subdirectory(audio)
+add_subdirectory(scene_deserialization)
 add_subdirectory(scene_transition)
+
+add_subdirectory(audio)
 add_subdirectory(fullscreen)
 add_subdirectory(resolution)
 add_subdirectory(script)
