Add broadphase demo

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -56,3 +56,4 @@ add_subdirectory(top_down_movement)
 add_subdirectory(event)
 add_subdirectory(interactive)
 add_subdirectory(collision)
+add_subdirectory(broadphase)
