Add dialogue demo

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -15,6 +15,7 @@ add_subdirectory(camera_shake)
 # add_subdirectory(camera_rotate)
 # add_subdirectory(camera_follow)
 # add_subdirectory(camera_fade)
+add_subdirectory(ui_dialogue)
 add_subdirectory(ui_dropdown)
 add_subdirectory(ui_button)
 add_subdirectory(ui_button_group)
