Add component hook demo

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -26,6 +26,7 @@ add_subdirectory(serialization_json)
 add_subdirectory(serialization_scene)
 
 add_subdirectory(animation)
+add_subdirectory(render_target)
 add_subdirectory(graphics_object)
 add_subdirectory(renderer)
 add_subdirectory(light)
@@ -54,6 +55,7 @@ add_subdirectory(parallax)
 add_subdirectory(platforming)
 add_subdirectory(top_down_movement)
 
+add_subdirectory(component_hooks)
 add_subdirectory(event)
 add_subdirectory(interactive)
 add_subdirectory(collision)
