--- a/src/resources/shader/manifest.json
+++ b/src/resources/shader/manifest.json
@@ -1,13 +1,44 @@
 {
-  "fullscreen_blur": {
+  "quad": {
+    "source": "quad"
+  },
+  "screen_default": {
+    "source": "screen_default"
+  },
+  "circle": {
     "vertex": "quad",
-    "fragment": "blur"
+    "fragment": "circle"
   },
-  "phong": {
-    "source": "phong"
+  "blur": {
+    "vertex": "screen_default",
+    "fragment": "screen_blur"
   },
-  "postprocess": {
-    "fragment": "postprocess",
-    "vertex": "quad"
+  "gaussian_blur": {
+    "vertex": "screen_default",
+    "fragment": "screen_gaussian_blur"
+  },
+  "edge_detection": {
+    "vertex": "screen_default",
+    "fragment": "screen_edge_detection"
+  },
+  "grayscale": {
+    "vertex": "screen_default",
+    "fragment": "screen_grayscale"
+  },
+  "inverse_color": {
+    "vertex": "screen_default",
+    "fragment": "screen_inverse_color"
+  },
+  "sharpen": {
+    "vertex": "screen_default",
+    "fragment": "screen_sharpen"
+  },
+  "light": {
+    "vertex": "screen_default",
+    "fragment": "light"
+  },
+  "tone_mapping": {
+    "vertex": "screen_default",
+    "fragment": "tone_mapping"
   }
 }
