Added capsule shader

--- a/src/resources/shader/manifest.json
+++ b/src/resources/shader/manifest.json
@@ -9,6 +9,10 @@
     "vertex": "quad",
     "fragment": "circle"
   },
+  "capsule": {
+    "vertex": "quad",
+    "fragment": "capsule"
+  },
   "blur": {
     "vertex": "screen_default",
     "fragment": "screen_blur"
