--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -33,6 +33,7 @@ add_subdirectory(render_shape)
 add_subdirectory(render_animation)
 add_subdirectory(render_target)
 add_subdirectory(render_light)
+add_subdirectory(render_shadows)
 add_subdirectory(render_blend_mode)
 add_subdirectory(render_image_formats)
 add_subdirectory(render_graphics_object)
