--- a/demos/player_top_down/CMakeLists.txt
+++ b/demos/player_top_down/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(top_down_movement)
+project(player_top_down)
 
 set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
