--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -15,13 +15,6 @@ add_subdirectory(camera_shake)
 # add_subdirectory(camera_rotate) add_subdirectory(camera_follow)
 # add_subdirectory(camera_fade)
 
-add_subdirectory(ui_dialogue)
-add_subdirectory(ui_dropdown)
-add_subdirectory(ui_button)
-add_subdirectory(ui_button_animated)
-add_subdirectory(ui_button_group)
-add_subdirectory(ui_plot)
-
 add_subdirectory(serialization_binary)
 add_subdirectory(serialization_json)
 add_subdirectory(serialization_scene)
@@ -68,3 +61,11 @@ add_subdirectory(audio)
 add_subdirectory(pathfinding)
 add_subdirectory(component_hooks)
 add_subdirectory(interactive)
+
+add_subdirectory(ui_dialogue)
+add_subdirectory(ui_dropdown)
+add_subdirectory(ui_button)
+add_subdirectory(ui_button_animated)
+add_subdirectory(ui_button_group)
+add_subdirectory(ui_plot)
+add_subdirectory(ui_tooltip)
