Add graphics objects

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -27,7 +27,7 @@ add_subdirectory(render_light)
 add_subdirectory(render_shadows)
 add_subdirectory(render_blend_mode)
 add_subdirectory(render_image_formats)
-add_subdirectory(render_graphics_object)
+add_subdirectory(render_graphics)
 add_subdirectory(render_text)
 add_subdirectory(render_particle)
 add_subdirectory(render_parallax)
